# mercury-testboard-fw

./: .astylerc  .clang-format  .gitignore  CMakeLists.txt  README.md  TestBoardMercury.kdev4  buildLib.sh  format.sh  memo.txt  platformio.ini  program.sh
.kdev4/: TestBoardMercury.kdev4
arduinoLib/ArduinoJson/src/ArduinoJson/: Namespace.hpp  compatibility.hpp
arduinoLib/ArduinoJson/src/ArduinoJson/Array/: ArrayData.hpp  ArrayImpl.hpp  ElementProxy.hpp  JsonArray.hpp  JsonArrayConst.hpp  JsonArrayIterator.hpp  Utilities.hpp
arduinoLib/ArduinoJson/src/ArduinoJson/Collection/: CollectionData.hpp  CollectionImpl.hpp
arduinoLib/ArduinoJson/src/ArduinoJson/Deserialization/: DeserializationError.hpp  DeserializationOptions.hpp  Filter.hpp  NestingLimit.hpp  Reader.hpp  deserialize.hpp
arduinoLib/ArduinoJson/src/ArduinoJson/Document/: JsonDocument.hpp
arduinoLib/ArduinoJson/src/ArduinoJson/Json/: EscapeSequence.hpp  JsonDeserializer.hpp  JsonSerializer.hpp  Latch.hpp  PrettyJsonSerializer.hpp  TextFormatter.hpp  Utf16.hpp  Utf8.hpp
arduinoLib/ArduinoJson/src/ArduinoJson/Memory/: Alignment.hpp  Allocator.hpp  ResourceManager.hpp  ResourceManagerImpl.hpp  StringBuffer.hpp  StringBuilder.hpp  StringNode.hpp  StringPool.hpp  VariantPool.hpp  VariantPoolImpl.hpp  VariantPoolList.hpp
arduinoLib/ArduinoJson/src/ArduinoJson/Misc/: SerializedValue.hpp
arduinoLib/ArduinoJson/src/ArduinoJson/MsgPack/: MsgPackBinary.hpp  MsgPackDeserializer.hpp  MsgPackExtension.hpp  MsgPackSerializer.hpp  endianness.hpp  ieee754.hpp
arduinoLib/ArduinoJson/src/ArduinoJson/Numbers/: FloatParts.hpp  FloatTraits.hpp  JsonInteger.hpp  arithmeticCompare.hpp  convertNumber.hpp  parseNumber.hpp
arduinoLib/ArduinoJson/src/ArduinoJson/Object/: JsonObject.hpp  JsonObjectConst.hpp  JsonObjectIterator.hpp  JsonPair.hpp  MemberProxy.hpp  ObjectData.hpp  ObjectImpl.hpp
arduinoLib/ArduinoJson/src/ArduinoJson/Polyfills/: alias_cast.hpp  ctype.hpp  integer.hpp  limits.hpp  math.hpp  pgmspace.hpp  pgmspace_generic.hpp  preprocessor.hpp  utility.hpp
arduinoLib/ArduinoJson/src/ArduinoJson/Strings/: IsString.hpp  (+4 more)
arduinoLib/CRCx/: CRCx.h
arduinoLib/CRCx/libs/CRCpp/: CRC.h
arduinoLib/CRCx/libs/FastCRC/: FastCRC.h  FastCRC_cpu.h  FastCRC_tables.h  FastCRChw.h  FastCRCsw.h
arduinoLib/Ring-Buffer/: ringbuffer.hpp
arduinoLib/TaskScheduler/examples/Scheduler_example16_Multitab/: file1.cpp  file2.cpp
arduinoLib/TaskScheduler/examples/Scheduler_example20_StatusRequest_LTS_WDT_Timeout_Object/: SuperSensor.cpp  SuperSensor.h
arduinoLib/TaskScheduler/examples/Scheduler_example21_OO_Callbacks/: Calculator.cpp  Calculator.h  SuperSensor.cpp  SuperSensor.h  Ticker.cpp  Ticker.h
arduinoLib/TaskScheduler/src/: TScheduler.hpp  TSchedulerDeclarations.hpp  TaskScheduler.h  TaskSchedulerDeclarations.h  TaskSchedulerSleepMethods.h
arduinoLib/Time/: DateStrings.cpp  Time.cpp  TimeLib.h
arduinoLib/Wdt_t4/: Watchdog_t4.h
arduinoLib/singleLEDLibrary/: singleLEDLibrary.cpp  singleLEDLibrary.h
cross/: arm-teensy32-gnueabihf.cmake  arm-teensy36-gnueabihf.cmake  arm-teensy40-gnueabihf.cmake  arm-teensy41-gnueabihf.cmake
include/: board.h  hw.h  init.h  inputs.hpp  reader.hpp  relays.hpp
lib/mercuryNetworking/: etherUtilities.cpp  etherUtilities.h  library.json  networking.cpp  networking.hpp
lib/mercuryNtpClient/: UdpNtpClient.cpp  UdpNtpClient.hpp
lib/mercuryPersistent/: persistent.cpp  persistent.hpp
lib/mercuryTcpIp/: tcpTerminal.hpp  udpTerminal.hpp
lib/singleLEDLibrary/: singleLEDLibrary.cpp
lib/watchdogWrapper/: watchdogWrapper.cpp  watchdogWrapper.h
mylib/: .logger.hpp.kate-swp  argvp.cpp  argvp.h  cmd.h  datatypes.h  hw.h  inputs.hpp  reader.hpp  relays.hpp  shellFunctor.hpp  simpleEvents.h  utility.cpp  utility.h
mylib/logger/: logger.cpp  logger.hpp
mylib/networking/: etherUtilities.cpp  networking.cpp  networking.hpp
mylib/ntpclient/: UdpNtpClient.cpp
mylib/singleLEDLibraryMod/: singleLEDLibraryMod.cpp  singleLEDLibraryMod.h
mylib/tcpip/: tcpTerminal.hpp  udpTerminal.hpp
mylib/watchdog/: watchdog.cpp  watchdog.h
src/: board.cpp  init.cpp  main.cpp
src/board/: board.cpp  board.h  humidityContr.hpp  networkedSensor.hpp  persistent.cpp  persistent.hpp
(+56 files in other folders)
